force-app/main/default/objects/kfsell__Green_Sheet__c/kfsell__Green_Sheet__c.object-meta.xml
<CustomObject>
    <label>Green Sheet</label>
    <nameField>
        <displayFormat>GRN- {00000}</displayFormat>
        <label>Green Sheet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Green Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>