force-app/main/default/objects/kfsell__Green_Sheet__c/fields/kfsell__Blue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Blue_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Sheet</label>
    <referenceTo>kfsell__Blue_Sheet__c</referenceTo>
    <relationshipLabel>Green Sheets</relationshipLabel>
    <relationshipName>Green_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>