force-app/main/default/objects/kfsell__Green_Sheet__c/fields/kfsell__GreenSheet_GUID__c.field-meta.xml
<CustomField>
    <fullName>kfsell__GreenSheet_GUID__c</fullName>
    <label>GreenSheet GUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>