force-app/main/default/objects/kfsell__Green_Sheet__c/fields/kfsell__Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>