force-app/main/default/objects/kfsell__Green_Sheet__c/fields/kfsell__To_Increase_Credibility__c.field-meta.xml
<CustomField>
    <fullName>kfsell__To_Increase_Credibility__c</fullName>
    <label>To Increase Credibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>